<resources>
    <string name="app_name">TrunkCarAssistant</string>
    <string name="LUGGAGE">LUGGAGE</string>
    <string name="TRUNK">TRUNK</string>
    <string name="START">START PACKING</string>
    <string name="ADDT">ADD TRUNK</string>
    <string name="ADDL">ADD LUGGAGE</string>
    <string name="PACK">PACK IT!</string>
    <string name="S">S</string>
    <string name="M">M</string>
    <string name="L">L</string>
    <string name="carTextView">Picked car: </string>
    <string name="pickTrunkDialogTitle">Pick a trunk</string>
    <string name="TrunkLenTextView">Trunk depth [cm]</string>
    <string name="TrunkWidTextView">Trunk width [cm]</string>
    <string name="TrunkHeiTextView">Trunk weight [cm]</string>
    <string name="TrunkListTextView">Trunks list</string>
    <string name="buttonADD">Add trunk</string>
    <string name="O">Other</string>
    <string name="buttonDEL">REMOVE</string>
    <string name="length">DEPTH [cm]</string>
    <string name="height">HEIGHT [cm]</string>
    <string name="width">WIDTH [cm]</string>
    <string name="save">SAVE</string>
    <string name="carWidth"> Trunk width [cm]</string>
    <string name="carLength"> Trunk depth [cm]</string>
    <string name="carHeight"> Trunk height [cm]</string>
    <string name="luggageWidth"> Luggage width [cm]</string>
    <string name="luggageDepth"> Luggage depth [cm]</string>
    <string name="luggageHeight"> Luggage height [cm]</string>
    <string name="luggageListTextView">Luggages list</string>
    <string name="textView_name">NAME</string>
    <string name="luggageOKButton">OK</string>
    <string name="title_activity_edit_trunk">EditTrunkActivity</string>
    <string name="title_activity_edit_luggage">EditLuggageActivity</string>
    <string name="title_activity_edit_luggage_array_adapter">EditLuggageArrayAdapter</string>
    <string name="title_activity_luggage_to_edit">LuggageToEditActivity</string>
    <string name="TrunkNickTextView">Trunk Alias</string>
</resources>
