<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tmu2018.trunkcarassistant.StartActivity">

    <tmu2018.trunkcarassistant.TrunkView
        android:id="@+id/trunkView"
        android:layout_width="match_parent"
        android:layout_height="423dp" />

    <Button
<<<<<<< HEAD
        android:id="@+id/packit_start"
=======
<<<<<<< HEAD
        android:id="@+id/packit_start"
=======
        android:id="@+id/PACK"
>>>>>>> f8a6c252b3d43a26f2fe0eb37a3a63b70607f1d9
>>>>>>> feb217ad8a3d7c9c76d0174488f1461c6a102606
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PACK" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/trunk_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TRUNK" />

        <Button
            android:id="@+id/luggage_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LUGGAGE" />

    </LinearLayout>

    <TextView
        android:id="@+id/carTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carTextView" />

    <TextView
        android:id="@+id/carIDTextView"
        android:layout_width="72dp"
        android:layout_height="wrap_content" />


</LinearLayout>
