<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tmu2018.trunkcarassistant.AddTrunkActivity">


    <Spinner
        android:id="@+id/car_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/model_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TrunkLenTextView" />

    <EditText
        android:id="@+id/trunkLengthText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/trunkWidTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TrunkWidTextView" />

    <EditText
        android:id="@+id/trunkWidthText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/buttonADD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonADD"/>

</LinearLayout>
