<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="tmu2018.trunkcarassistant.MainActivity">


    <tmu2018.trunkcarassistant.TrunkIconView
        android:id="@+id/trunkIconView6"
        android:layout_width="160dp"
        android:layout_height="135dp"
        android:layout_gravity="center_vertical|center_horizontal"
        />

    <Button
        android:id="@+id/trunk"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/TRUNK"
         />


    <tmu2018.trunkcarassistant.LuggageIconView
        android:id="@+id/luggageIconView4"
        android:layout_width="160dp"
        android:layout_height="135dp"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <Button
        android:id="@+id/luggage"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/LUGGAGE"
         />


    <tmu2018.trunkcarassistant.PackIconView
        android:layout_width="160dp"
        android:layout_height="135dp"
        android:layout_gravity="center_vertical|center_horizontal" />

    <Button
        android:id="@+id/start"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/START"
        />


</LinearLayout>
