<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:orientation="horizontal">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/carName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="24sp"/>


        </RelativeLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/carL"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/carLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_weight="1"
                    android:text="@string/luggageHeight"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/carW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/carWidth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_weight="1"
                    android:text="@string/luggageDepth"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1">

            <TextView
                    android:id="@+id/carH"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            <TextView
                    android:id="@+id/carHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_weight="1"
                    android:text="@string/luggageWidth"/>

        </LinearLayout>

    </LinearLayout>
    <tmu2018.trunkcarassistant.LuggageIconAdapterView
        android:id="@+id/luggageIconAdapterView5"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"

        android:layout_weight="1" />
</LinearLayout>